Beginnings of ICFP (infinite content, finite presentation)     That is, not all contributions are rendered, some are collapsed. More and better object model code, for Contribution and Category. Better deanimating.  (That is, being quick to respond to user doesn't do clumsy stuff.) Fixed bug in deanimate that made all kinds of weird things happen out of order.     E.g. an overeager popup before popdown was done, thumbnail ghost appeared ON TOP OF the popup.     Basically jQuery .finish() will NOT immediately call an animation's callbacks.     However .stop(true, true) will immediately complete. Finally figured out, iFrameResizer uses checkOrigin on the parent, targetOrigin on the child. Had apparently mixed up target and other origins on live server. Better handling of exception in FSM. autoplay: '0' MIGHT prevent some pernicious youtube autoplaying in EMBEDDED videos

--- a/static/code/contribution.css
+++ b/static/code/contribution.css
@@ -324,7 +324,7 @@ select#thumb-res option { direction: rtl; }
 
 /* Visibility of individual contribution controls */
 
-.sup-contribution.pop-up                         .save-bar .edit    { display: none; }
+.sup-contribution.pop-up                         .save-bar .edit    { visibility:hidden; }
 .sup-contribution.contribution-edit              .save-bar .edit    { display: none; }
 body.playing-somewhere                           .save-bar .edit    { display: none; }
 .sup-contribution:not(.contribution-edit)        .save-bar .cancel  { display: none; }
@@ -335,13 +335,13 @@ body.playing-somewhere                           .save-bar .edit    { display: n
 .sup-contribution                                .save-bar   .play { display: inline-block; }
 .sup-contribution.contribution-edit              .save-bar   .play { display: none; }
 body.playing-somewhere                           .save-bar   .play { display: none; }
-.sup-contribution.pop-up                         .save-bar   .play { display: none; }
+.sup-contribution.pop-up                         .save-bar   .play { visibility:hidden; }
 .sup-contribution.cant-play                      .save-bar   .play { display: none; }
 
 .sup-contribution                                .save-bar   .expand { display: inline-block; }
 .sup-contribution.contribution-edit              .save-bar   .expand { display: none; }
 body.playing-somewhere                           .save-bar   .expand { display: none; }
-.sup-contribution.pop-up                         .save-bar   .expand { display: none; }
+.sup-contribution.pop-up                         .save-bar   .expand { visibility:hidden; }
 .sup-contribution.noembed-error                  .save-bar   .expand { display: none; }
 
 .sup-contribution.can-play                       .save-bar   .expand span { display: none; }
@@ -351,9 +351,11 @@ body.playing-somewhere                           .save-bar   .expand { display: 
 .sup-contribution.render-media                   .save-bar   .external-link { display: inline-block; }
 .sup-contribution.render-media.noembed-error     .save-bar   .external-link { display: none; }
 .sup-contribution.render-media.contribution-edit .save-bar   .external-link { display: none; }
-.sup-contribution.pop-up                         .save-bar   .external-link { display: none; }
+.sup-contribution.pop-up                         .save-bar   .external-link { visibility:hidden; }
 
-
+/* NOTE:  The .pop-up { visibility:hidden } settings above (instead of display:none) help the pop-up
+          animation start with the correct size of the thumbnail, where the whole save-bar is
+          visibility-hidden (i.e. taking up space) until hovering. */
 
 .grip {
     cursor: move;
